assets/style.scss
/* ... */
#search-input {
  width: 80%;
  padding: 12px 20px;
  margin: 8px 0;
  display: inline-block;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
  font-size: 18px;
  background-color: #fff3ff;
}

.share-box {
  font-weight: bold;
  color: #222;
}

span[data-pullquote] {
  display: block;

  @include mobile {
    display: none;
  }
}

span[data-pullquote]:before {
  content: attr(data-pullquote);
  float: right;
  width: 200px;
  margin: 0 0 0.5em 30px;
  padding: 0 -5% 0 0;
  font-size: 1.3em;
  font-style: italic;
  color: green;
  text-align: center;
}

a {
  color: $darkGray;
  text-decoration: none;
	cursor: pointer;
}

ul, ol {
  margin: 15px 0;
  padding-left: 30px;
}

ul {
  list-style-type: disc;
}

ol {
  list-style-type: decimal;
}

ol ul, ul ol, ul ul, ol ol {
  margin: 0;
}

ul ul, ol ul {
  list-style-type: circle;
}

em, i {
  font-style: italic;
}

strong, b {
  font-weight: bold;
}

img {
  max-width: 100%;
}

p > img {
  text-align: center;
  display: block;
  margin: 0 auto;
}

// Fixes images in popup boxes from Google Translate
.gmnoprint img {
  max-width: none;
}

.date {
  font-style: italic;
  color: $gray;
}

sup, sub {
  font-size: 80%;
  position: relative;
  vertical-align: baseline;
  top: -0.4em;
}
sub {
  top: 0.4em;
}

// Specify the color of the selection
::-moz-selection {
  color: $black;
  background: $lightGray;
}
::selection {
  color: $black;
  background: $lightGray;
}

// Nicolas Gallagher's micro clearfix hack
// http://nicolasgallagher.com/micro-clearfix-hack/
.clearfix:before {
    height: 25px;
}

.clearfix:after {
    content: " ";
    display: table;
}

.clearfix:after {
    clear: both;
}

/*********************/
/* LAYOUT / SECTIONS */
/*********************/

//
// .masthead
//

.wrapper-masthead {
  height: 200px;
  padding-top: 50px;
  padding-bottom: 5px;
  background-image: url("{{ site.baseurl }}/images/header_hintergrund.png");
  background-repeat: no-repeat;
  background-size: 100%;
}

.masthead {
  padding: 20px 0;
  border-bottom: 1px solid $lightGray;

  @include mobile {
    text-align: center;
  }
}

.site-avatar {
  float: left;
  width: 70px;
  height: 70px;
  margin-right: 15px;

  @include mobile {
    float: none;
    display: block;
    margin: 0 auto;
  }

  img {
    border-radius: 5px;
    width: 70px;
    height: 70px;
    object-fit: cover;
  }
}

.site-info {
  float: left;

  @include mobile {
    float: none;
    display: block;
    margin: 0 auto;
  }
}

.site-name {
  margin: 0;
  color: $black;
  cursor: pointer;
  font-family: $helveticaNeue;
  font-weight: bold;
  font-size: 28px;
  letter-spacing: 1px;
  text-align: left;

  @include mobile {
    text-align: center;
  }
}

.site-description {
  margin: -5px 0 0 0;
  color: $gray;
  font-size: 16px;

  @include mobile {
    margin: 3px 0;
  }
}

nav {
  float: right;
  margin-top: 23px; // @TODO: Vertically middle align
  font-family: $helveticaNeue;
  font-size: 18px;

  @include mobile {
    float: none;
    margin-top: 9px;
    display: block;
    font-size: 16px;
  }

  a {
    margin-left: 5px;
    color: $darkGray;
    text-align: right;
    font-weight: 500;
    letter-spacing: 1px;
    padding-left: 10px;
    padding-right: 10px;
    display: inline-block;
    border: 2px solid rgb(255, 251, 226);
    border-radius: 3px;

    &:hover, &:active {
      color: $black;
      border: 2px solid rgb(32, 128, 32);
    }

    @include mobile {
      margin: 0 10px;
      color: $black
    }
  }
}

//
// .main
//

.posts > .post {
  padding-bottom: 2em;
  border-bottom: 1px solid $lightGray;
}

.posts > .post:last-child {
  padding-bottom: 1em;
  border-bottom: none;
}

.post {
  blockquote {
    margin: 1.8em .8em;
    /*border-left: 2px solid $gray;*/
    padding: 0.1em 1em;
    color: $gray;
    font-size: 22px;
    font-style: italic;
    background-color: #ede1ff;
  }

  .you-may-like{
    margin: 1.8em .8em;
    /*border-left: 2px solid $gray;*/
    padding: 0.1em 1em;
    color: $gray;
    font-size: 22px;
    font-style: italic;
    background-color: #ddffb5;
  }

  .comments {
    margin-top: 10px;
  }

  .read-more {
    text-transform: uppercase;
    font-size: 14px;
    font-weight: 400;
    color: $black;
    float: right;
    padding: 2px 16px;
    background-color: #cecece;
    border: none;
    border-radius: 4px;
    margin-right: 5em;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2), 0 2px 2px rgba(0, 0, 0, 0.14);
    transition: all 0.2s ease;
    display: inline-block;
    cursor: pointer;
    
    &:hover, &:active {
      background-color: $white;
      box-shadow: 0 6px 10px rgba(0, 0, 0, 0.3), 0 4px 5px rgba(0, 0, 0, 0.2);
      transform: translateY(-2px);
    }
    
    &:active {
      box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
      transform: translateY(0);
    }
  }
}

.wrapper-container {
  background-color: rgb(255, 251, 226);
  min-height: 100%;
  position: relative;
}

.wrapper-main {
  padding-top: 25px;
  background-image: url("{{ site.baseurl }}/images/content_hintergrund.png");
  background-repeat: repeat;
  background-size:100%;
  padding-bottom: 134px;
}

.wrapper-footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 115px;
  background-color: $lightGray;
}

footer {
  padding: 20px 0;
  text-align: center;
}

body:after {
  background: white;
  width: 100%;
  height: 1px;
  top: 0;
  position: absolute;
   left: 0;
  content: '';
}

#bar {
    background: #000;
    height: 0px;
    background-size: cover;
    background-position: left 60%;
    position: fixed;
    top: 0;
    width: 100%;
    overflow: hidden;
    z-index: 1000;
}

.post h1{
  font-family: -system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  text-align: center;
  font-weight: bold;
  font-kerning: auto;
  font-feature-settings: "kern","liga","dlig","hlig","cswh";
  line-height: 1.2;
}
/* ... */

